...

  void _onCreateReviewPressed(BuildContext context) async {
    final newReview = await showDialog<Review>(
      context: context,
      builder: (BuildContext context) => ReviewCreateDialog(
        userId: _user.uid,
        userName: _user.displayName ?? 'Anonymous User',
      ),
    );
    if (newReview != null) {
      // Save the review
      await _firestoreRestaurantProvider.addReview(
        restaurantId: widget.restaurant.id!,
...
                    children: [
                      const Text(
                        'There are no reviews yet! Generate random reviews with button.',
                      ),
                      ElevatedButton(
                        onPressed: _onAddRandomReviewsPressed,
                        child: const Text('Add Random Reviews'),
                      )
                    ],
                  ),
                ),
            ],
          ),
...
