...
                            );
                          },
                        )
                      : EmptyListView(
                          onPressed: _onAddRandomRestaurantsPressed,
                          child: const Text(
                              'FriendlyEats has no restaurants yet!'),
                        ),
            ),
          ),
        );
      },
    );
...
